--- a/requirements.txt
+++ b/requirements.txt
@@ -19,5 +19,7 @@ Flask-Minify==0.37
 Flask-Dance==7.0.0
 PyJWT==2.4.0
 psycopg2==2.9.9
+pytz==2024.1
+PyGithub==2.3.0
 # flask_mysqldb
 # psycopg2-binary
